--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,54 @@
 ######################
 
 
+
+
+
+
+######################
+# Node / JS / Web
+######################
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+######################
+# Test
+######################
+/test/unit/coverage/
+
+
+######################
+# Docker
+######################
+docker/package.json
+
+
+######################
+# Editors
+######################
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+
+######################
+# Intellij
+######################
+.idea/
+.idea/**
+*.iml
+*.iws
+*.ipr
+*.ids
+*.orig
+
+
 ######################
 # Eclipse
 ######################
@@ -36,26 +84,22 @@ local.properties
 # PDT-specific
 .buildpath
 
-######################
-# Intellij
-######################
-.idea/**
-*.iml
-*.iws
-*.ipr
-*.ids
-*.orig
 
 ######################
 # Maven
 ######################
 /log/**
 /target/**
+.mvn/**
+
 
 ######################
 # Gradle
 ######################
+gradle/**
 .gradle/**
+*/.gradle/**
+
 
 ######################
 # Package Files
@@ -64,6 +108,7 @@ local.properties
 *.war
 *.ear
 *.db
+
 
 ######################
 # Windows
@@ -74,13 +119,11 @@ Thumbs.db
 # Folder config file
 Desktop.ini
 
+
 ######################
 # Mac OSX
 ######################
 .DS_Store
-.svn
-.svn/**
-*.svn
 
 # Thumbnails
 ._*
@@ -89,12 +132,21 @@ Desktop.ini
 .Spotlight-V100
 .Trashes
 
+
+######################
+# Subversion
+######################
+.svn
+.svn/**
+*.svn
+
+
 ######################
 # Directories
 ######################
-/build/**
 /spring_loaded/**
 /deploy/**
+
 
 ######################
 # Logs
@@ -104,6 +156,13 @@ logs
 logs/*
 tmp
 tmp/*
+
+
+######################
+# ESLint
+######################
+.eslintcache
+
 
 ######################
 # Others
@@ -121,17 +180,4 @@ output.txt
 hs_err_pid*
 .mtj.tmp/**
 
-######################
-# Gradle Wrapper
-######################
-gradle/**
 
-######################
-# Maven Wrapper
-######################
-.mvn/**
-
-######################
-# ESLint
-######################
-.eslintcache
